--- a/Mcba.UI/Properties/Resources.resx
+++ b/Mcba.UI/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="filtro28" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\filtro28.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="IconBuscar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconBuscar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconClear" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconClear.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
