Menu principal - Leyendas según idioma: Login

--- a/Mcba.UI/Menu.resx
+++ b/Mcba.UI/Menu.resx
@@ -126,4 +126,132 @@
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAMDAAAAEAGACoHAAAFgAAACgAAAAwAAAAYAAAAAEAGAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAACIfnBtZVNuZFRvZFVsY1RsY1NuY1NuY1NuY1JuY1NtY1NsY1NtY1NuY1NuY1JuY1JuY1NtY1Ns
+        Y1NtY1NuY1NuY1JuY1NuY1NsY1NsY1NuY1NuY1NuY1JuY1NtY1NsY1NtY1NuY1NuY1JuY1NuY1NsY1Ns
+        Y1NuY1NuY1NuY1JuY1NtYlRtY1WVi4AAAAAAAABFNiVEOCJEOCNEOCNEOCNENyJENyJEOCJEOCJEOCJE
+        NyJENyJENyJENyJEOCJEOCJENyJENyJENyJENyJEOCJEOCJEOCJENyJENyJENyJENyJEOCJEOCJEOCJE
+        NyJENyJENyJEOCJEOCJEOCJENyJENyJENyJENyJEOCJEOCJEOCJENyJEOCNUSDcAAAAAAABENSRENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyNENyNENyNFOCNFOCNFOCNEOCNEOCNG
+        OCJFNyJFOCNFOCNFOCNFOCNFNyNENyNENyNENyNFNyNFNyNENyNEOCJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJF
+        NyNENyNDNyRFOCRGOCNGOCNFOCRDOCRHOSZIOSdHOCVGOCRGOSJIOSNGNyJDNyRDNiRFNyVGNyVENiRE
+        NyVEOCJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyNENyNFOCN3bWC1rqK9tqqjnI9XSzpDNyRENyJIPCiimpDEvrbIwrqmn5FIOidF
+        OCNHOSRgUkCknJG3sKWimo5cUEFvZFRtYlFFOCJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJEOCJENyOelYqfl45TRjNHOihoXk7DvrRh
+        VkZGNSOfl46HgHJENiRENiWQiXyDfG5FNyR1bF+6taxmWElMPy9lW0u9uK+wq6B+dWZFNyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        OCJlW0qtppxFNyRFNyNFNyNENyJRRzatppxiVkW6s6pENyVENyNENyNlW06fmY1PRTDCvbZHOylENyNF
+        NyNFOCJJPirW0sx9dGdENyNENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCOdlolkWktENyNENyNFOCNFOCNENyRNQS++urFfUkFFNiVe
+        UkOIfW/Lxr5oXEulnZNuYlRFNyNFNyJENyJENyJFOCGSin19c2dENyNENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNEOCKooZdcUkJENyNE
+        NyNFOCNFOCNDOCJ5bmCknZNOQjHFvra3saeLg3dUSjphVUW0rKFDNyZEOCNENyJENyJENyJENySFfXJ7
+        cGJEOCJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNFOCNENyKmn5WPiHxENyNENyNFNyNFNyJGOyXEvrdQRDGHfnCHfnJENyRENyNDNyW1sahc
+        UT6Rh3tFNyNENyJENyJENyNENySxrKJXSzpEOCJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyKnoZbLxr5tZFdFNyNGOCNIOymspZt/
+        dmdFOCN6cGCPiX9FNyNFNyN6cWKdloxFNyKtpZt/dGZFOCNENyNDNyWBeWuooJNENyNENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNE
+        NyKnopZeUkGmn5XAubG5sqvDvbR4bmBENyNEOCJHOSWtpZi6tq28uLCvqqBMPilHNyJJOyadl47Au7Kw
+        qqLAvLOclIdFOSdENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyKmopdXSzhFNyNFOiZKPStGNyVFOCNFOCNFOCNFNyNFNyNL
+        PyxLPy1ENyNHNyJGNyJFNyJENyNKPCpSRjNGOyhCNiRDNyRENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyKpopVWSjhFOCNF
+        OCNENyNFNyNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNEOCJEOCJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNFOCNFNyJXSjZHOidFOCJFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNF
+        OCNENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFNyNFNyJFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNENyNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFNyJFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNFOCNFOCNENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCJF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCJFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNF
+        OCNENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABENSRFNyJENyJENyJFNyJFOCJENyJFOCJFOCJFOCJFOCJENyJFOCJENyJFOCJFOCJFOCJFNyJF
+        NyJFNyJFOCJFOCJFOCJFOCJFOCJFNyJFNyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJFNyJFNyJFNyNFNyJENyJFOCNFNyNFNyJF
+        NyNFNyNFNyJENyJFNyJFOCNFNyNFNyNFNyNFNyNFNyNFNyNFNyNFNyJFNyNFNyNFNyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJE
+        NyJEOCJEOCJEOCJENyJFOCJEOCJEOCJEOCJEOCJFOCJENyJEOCJEOCNEOCJFOCJFOCJFOCJEOCJEOCJF
+        OCJEOCJEOCJEOCJFOCJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJFNyJFNyJENyJFNyJFNyJFNyJFNyJFNyJFNyJENyJF
+        NyJFNyJFNyJFNyJFNyJFNyJFNyJFNyJFNyJFNyJFNyJENyJFNyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJEOCJFOCJE
+        NyJEOCJEOCJFOCJEOCJEOCJFOCJENyJFOCJEOCJEOCJFNyJFOCJEOCJEOCJEOCJFOCJFOCJFOCJEOCJF
+        OCJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMA
+        AAAAAABENSRENyJENyJENyJFOCNFOCNENyJFOCNFOCNFOCJFOCNEOCNFOCJENyJFOCNFOCNFNyNFOCNF
+        NyNFNyNFOCNFOCJFOCNFOCNFOCJEOCNFNyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABENSRENyJENyJENyJEOCNEOCNENyJFOCNFOCNFOCNF
+        OCNEOCNFOCNENyJFOCNFOCNFOCNFOCNFNyNFNyNEOCNEOCNFOCNFOCNFOCNEOCNFNyNENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJRRTMAAAAAAABFNSRFOCNF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyJFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNF
+        OCNFOCNFOCNFOCNFOCNENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJRRTMAAAAAAABFNSRFOCNFOCNFOCNFOCNFOCNENyJFOCNFOCNFOCNFOCNFOCNFOCNENyJF
+        OCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNFOCNENyJENyJENyJENyJENyJENyJENyJE
+        NyJENyJENyJENyJENyJENyJENyJENyJENyJENyJENyJSRTMAAAAAAABFNSRFOCNFOCNEOCNFOCJFOCJE
+        OCNFOCNFOCNFOCNFOCJFOCJFOCJENyJFOCNFOCNFOCNFOCJFOCJFOCJFOCNFOCNFOCNFOCNFOCJFOCJF
+        OCNENyJENyJENyJEOCJEOCJEOCJENyJENyJENyJENyJEOCJEOCJENyJENyJENyJENyJENyJENyJSRTMA
+        AAAAAABENSREOCJEOCJEOCJFOCJFOCJEOCJFOCJEOCJFOCJFOCJFOCFFOCJENyJFOCJFOCNFOCJFOCJE
+        OCFFOCJFOCNFOCJFOCJFOCJFOCJFOCJFOCJENyJENyJENyJEOCJEOCFEOCJENyJENyJENyJENyJEOCJE
+        OCJENyJENyJENyJENyJENyJENyJSRTMAAAAAAABENiNEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJE
+        OCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJE
+        OCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJEOCJFNyJSRTYAAAAAAAByaVxYTkBY
+        TkBZTkBYTD9XTT9XTT9YTD9XTT9XTT9YTD9YTD9XTT9YTD9YTD9XTT9XTT9YTD9XTT9XTT9YTD9YTD9X
+        TT9YTD9YTD9XTT9XTT9YTD9XTT9XTT9YTD9YTT9XTT9YTD9YTD9XTT9XTD9YTD9XTT9XTT9YTD9YTT9X
+        TT9YTT1aTz6Fe24AAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAAB
+        AACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAA
+        AAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAAB
+        AACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAA
+        AAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAAB
+        AACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAACAAAAAAAEAAIAA
+        AAAAAQAAgAAAAAABAACAAAAAAAEAAIAAAAAAAQAAgAAAAAABAAA=
+</value>
+  </data>
 </root>
