--- a/Mcba.UI/Properties/Resources.resx
+++ b/Mcba.UI/Properties/Resources.resx
@@ -166,4 +166,7 @@
   <data name="tick_sign_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\tick-sign-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bsaIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bsa.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
