--- a/Mcba.UI/Properties/Resources.resx
+++ b/Mcba.UI/Properties/Resources.resx
@@ -169,4 +169,7 @@
   <data name="bsaIco" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bsa.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="iconArrowLeft" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconArrowLeft.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
