--- a/Mcba.UI/Properties/Resources.resx
+++ b/Mcba.UI/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="IconNoBuscar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\IconNoBuscar.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="change_password_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\change-password-48.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
